// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WatchStreakCard should match snapshot in empty state 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Watch Streaks
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body2 css-2iyr4a-MuiTypography-root"
      >
        No streaks detected yet. Watch episodes on consecutive days to start building your streak!
      </p>
    </div>
  </div>
</div>
`;

exports[`WatchStreakCard should match snapshot in loading state 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Watch Streaks
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body2 css-2iyr4a-MuiTypography-root"
      >
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`WatchStreakCard should match snapshot with active streak 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-mbx0dj"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
        >
          Watch Streaks
        </h6>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorError MuiChip-filledError css-19grb1q-MuiChip-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorError css-1umw9bq-MuiSvgIcon-root"
            data-testid="WhatshotIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.5.67s.74 2.65.74 4.8c0 2.06-1.35 3.73-3.41 3.73-2.07 0-3.63-1.67-3.63-3.73l.03-.36C5.21 7.51 4 10.62 4 14c0 4.42 3.58 8 8 8s8-3.58 8-8C20 8.61 17.41 3.8 13.5.67M11.71 19c-1.78 0-3.22-1.4-3.22-3.14 0-1.62 1.05-2.76 2.81-3.12 1.77-.36 3.6-1.21 4.62-2.58.39 1.29.59 2.65.59 4.04 0 2.65-2.15 4.8-4.8 4.8"
            />
          </svg>
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            7 Days
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1b2uxew"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-1h0dqxm-MuiTypography-root"
            >
              7
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-107on3v-MuiTypography-root"
            >
              Current Streak
            </p>
            <span
              class="MuiTypography-root MuiTypography-caption css-18yjrcp-MuiTypography-root"
            >
              Since 
              1/1/2024
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1yrxulr"
          >
            <div
              class="MuiBox-root css-w2roj6"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-1wtp6o0-MuiSvgIcon-root"
                data-testid="EmojiEventsIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                />
              </svg>
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1a9zl4x-MuiTypography-root"
              >
                30
              </h4>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Longest Streak
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-hv6zls-MuiDivider-root"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-19midj6"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
            >
              Longest Streak Period
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1yrr6qh-MuiTypography-root"
            >
              6/1/2023
               -
               
              6/30/2023
            </p>
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              (
              30
               consecutive days)
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-19midj6"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
            >
              Streak Statistics
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1yrr6qh-MuiTypography-root"
            >
              5
               week+ streak
              s
            </p>
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              Avg: 
              12.5
               days per streak
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WatchStreakCard should match snapshot with no current streak 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-mbx0dj"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
        >
          Watch Streaks
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1m49wcg"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-7whpa7-MuiTypography-root"
            >
              0
            </h4>
            <p
              class="MuiTypography-root MuiTypography-body2 css-10vud17-MuiTypography-root"
            >
              Current Streak
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1yrxulr"
          >
            <div
              class="MuiBox-root css-w2roj6"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-1wtp6o0-MuiSvgIcon-root"
                data-testid="EmojiEventsIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                />
              </svg>
              <h4
                class="MuiTypography-root MuiTypography-h4 css-1a9zl4x-MuiTypography-root"
              >
                30
              </h4>
            </div>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
            >
              Longest Streak
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-hv6zls-MuiDivider-root"
          />
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-19midj6"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
            >
              Longest Streak Period
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1yrr6qh-MuiTypography-root"
            >
              6/1/2023
               -
               
              6/30/2023
            </p>
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              (
              30
               consecutive days)
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 css-13xb3fr-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-19midj6"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
            >
              Streak Statistics
            </h6>
            <p
              class="MuiTypography-root MuiTypography-body2 css-1yrr6qh-MuiTypography-root"
            >
              5
               week+ streak
              s
            </p>
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              Avg: 
              12.5
               days per streak
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
